--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Using pshell to manage data at Pawsey
+title: "Using pshell to manage data at Pawsey"
 
 # Contact.  This *must* include the protocol: if it's an email
 # address, it must look like "mailto:lessons@software-carpentry.org",
